2006-08-18 [paul]	0.15.2cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-02 [paul]	0.15.2

	0.15.2 released

2006-06-28 [colin]	0.15.1cvs1

	* configure.ac
		Fix bug #975 (etpan-privacy does not respect 
		LDFLAGS properly). Patch by
		Sascha Geschwandtner <s.geschwandtner@gmx.de>

2006-06-12 [paul]	0.15.1

	0.15.1 released

2006-06-06 [wwp]	0.15.0cvs2

	* configure.ac
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
	* src/.cvsignore
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.15.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-06-03 [wwp]	0.15.0cvs1

	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-17 [wwp] 0.15

	* src/plugin.c
		Updated sylpheed-claws product name.

2006-04-07 [colin] 	0.14

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-01-14 [hoa]	0.13

	* fix for libetpan 0.42

2005-12-15 [paul]	0.12

	* Add plugin_version()

2005-12-07 [colin]      0.11

	* Add plugin_licence()
	
2005-11-12 [colin]	0.10

	* src/prefs_privacy.c
	        Fix prefs saving/loading.
	
2005-01-24 [hoa]	0.9

	* src/etpan_privacy.c
	* src/plugin.c
	        changed API usage to sync with claws.
	
2005-01-23 [hoa]	0.8

	* src/etpan_privacy.c
	        changed API usage to sync with claws.

2004-08-26 [paul]

	* config/		** ADDED **
	* config/Makefile.am	** ADDED **
	* config/.cvsignore	** ADDED **
	* configure.ac
	* Makefile.am
	* src/Makefile.am
		use pkg-config
		fix up autotools magick

2004-08-26 [paul]

	* Makefile.am
	* src/Makefile.am
	  	fix install destination
		add 'make release'

2004-08-22 [hoa]	0.7
	
	* src/prefs_privacy.c
	    Update API calls.

2004-07-19 [colin]	0.6
	
	* src/prefs_privacy.c
	    Update functions name to sync with main.
	    Thanks to Charles A Edwards for the patch.

2003-12-16 [hoa]	0.5

	* ChangeLog