@@ -1,3 +1,8 @@
+2006-08-27 [colin]	0.15.2cvs2
+
+	* src/plugin.c
+		Implement plugin_provides()
+
 2006-08-18 [paul]	0.15.2cvs1
 
 	* configure.ac
